--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         </nav>
     </section>
     <section class="hpage">
-        <img src="sis.JPG" alt="">
+        <img src="sis.jpg" alt="">
         <h6>WHAT WE BELIEVE IN</h6>
         <p> Grow your business, establish your brand, and put <br>your customers first.</p>
     </section>
